Update the services part and view
